--- a/index.html
+++ b/index.html
@@ -11,8 +11,90 @@
         <title>Curso PHP</title>
     </head>
     <body>
-        <header class="cabecalho"></header>
-        <main class="principal"></main>
-        <footer class="rodape"></footer>
+        <header class="cabecalho">
+            <h1>Curso PHP</h1>
+            <h2>Índice dos Exercícios</h2>
+        </header>
+        <main class="principal">
+            <div class="conteudo">
+                <nav class="modulos">
+                    <div class="modulo verde">
+                        <h3>Módulo 01</h3>
+                        <ul>
+                            <li><a href="#">Exercício A</a></li>
+                            <li><a href="#">Exercício B</a></li>
+                            <li><a href="#">Exercício C</a></li>
+                        </ul>
+                    </div>
+                    <div class="modulo vermelho">
+                        <h3>Módulo 02</h3>
+                        <ul>
+                            <li><a href="#">Exercício A</a></li>
+                            <li><a href="#">Exercício B</a></li>
+                            <li><a href="#">Exercício C</a></li>
+                        </ul>
+                    </div>
+                    <div class="modulo">
+                        <h3>Módulo 03</h3>
+                        <ul>
+                            <li><a href="#">Exercício A</a></li>
+                            <li><a href="#">Exercício B</a></li>
+                            <li><a href="#">Exercício C</a></li>
+                        </ul>
+                    </div>
+                    <div class="modulo">
+                        <h3>Módulo 04</h3>
+                        <ul>
+                            <li><a href="#">Exercício A</a></li>
+                            <li><a href="#">Exercício B</a></li>
+                            <li><a href="#">Exercício C</a></li>
+                        </ul>
+                    </div>
+                    <div class="modulo">
+                        <h3>Módulo 05</h3>
+                        <ul>
+                            <li><a href="#">Exercício A</a></li>
+                            <li><a href="#">Exercício B</a></li>
+                            <li><a href="#">Exercício C</a></li>
+                        </ul>
+                    </div>
+                    <div class="modulo">
+                        <h3>Módulo 06</h3>
+                        <ul>
+                            <li><a href="#">Exercício A</a></li>
+                            <li><a href="#">Exercício B</a></li>
+                            <li><a href="#">Exercício C</a></li>
+                        </ul>
+                    </div>
+                    <div class="modulo">
+                        <h3>Módulo 07</h3>
+                        <ul>
+                            <li><a href="#">Exercício A</a></li>
+                            <li><a href="#">Exercício B</a></li>
+                            <li><a href="#">Exercício C</a></li>
+                        </ul>
+                    </div>
+                    <div class="modulo">
+                        <h3>Módulo 08</h3>
+                        <ul>
+                            <li><a href="#">Exercício A</a></li>
+                            <li><a href="#">Exercício B</a></li>
+                            <li><a href="#">Exercício C</a></li>
+                        </ul>
+                    </div>
+                    <div class="modulo">
+                        <h3>Módulo 09</h3>
+                        <ul>
+                            <li><a href="#">Exercício A</a></li>
+                            <li><a href="#">Exercício B</a></li>
+                            <li><a href="#">Exercício C</a></li>
+                        </ul>
+                    </div>
+                </nav>
+            </div>
+        </main>
+        <footer class="rodape">
+            COD3R & ALUNOS © 2019
+        </footer>
     </body>
 </html>
