--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                             <li><a href="#">Exercício C</a></li>
                         </ul>
                     </div>
-                    <div class="modulo">
+                    <div class="modulo azul">
                         <h3>Módulo 03</h3>
                         <ul>
                             <li><a href="#">Exercício A</a></li>
@@ -42,7 +42,7 @@
                             <li><a href="#">Exercício C</a></li>
                         </ul>
                     </div>
-                    <div class="modulo">
+                    <div class="modulo roxo">
                         <h3>Módulo 04</h3>
                         <ul>
                             <li><a href="#">Exercício A</a></li>
@@ -50,7 +50,7 @@
                             <li><a href="#">Exercício C</a></li>
                         </ul>
                     </div>
-                    <div class="modulo">
+                    <div class="modulo laranja">
                         <h3>Módulo 05</h3>
                         <ul>
                             <li><a href="#">Exercício A</a></li>
@@ -58,7 +58,7 @@
                             <li><a href="#">Exercício C</a></li>
                         </ul>
                     </div>
-                    <div class="modulo">
+                    <div class="modulo verde-escuro">
                         <h3>Módulo 06</h3>
                         <ul>
                             <li><a href="#">Exercício A</a></li>
@@ -66,7 +66,7 @@
                             <li><a href="#">Exercício C</a></li>
                         </ul>
                     </div>
-                    <div class="modulo">
+                    <div class="modulo vermelho-escuro">
                         <h3>Módulo 07</h3>
                         <ul>
                             <li><a href="#">Exercício A</a></li>
@@ -74,7 +74,7 @@
                             <li><a href="#">Exercício C</a></li>
                         </ul>
                     </div>
-                    <div class="modulo">
+                    <div class="modulo azul-escuro">
                         <h3>Módulo 08</h3>
                         <ul>
                             <li><a href="#">Exercício A</a></li>
@@ -82,7 +82,7 @@
                             <li><a href="#">Exercício C</a></li>
                         </ul>
                     </div>
-                    <div class="modulo">
+                    <div class="modulo roxo-escuro">
                         <h3>Módulo 09</h3>
                         <ul>
                             <li><a href="#">Exercício A</a></li>
